@@ -5,10 +5,11 @@ import (
 	"net/http"
 
 	"github.com/prometheus/client_golang/prometheus/promhttp"
+	"github.com/urfave/negroni"
+
 	metrics "github.com/slok/go-http-metrics/metrics/prometheus"
 	"github.com/slok/go-http-metrics/middleware"
 	negronimiddleware "github.com/slok/go-http-metrics/middleware/negroni"
-	"github.com/urfave/negroni"
 )
 
 // NegroniMiddleware shows how you would create a default middleware factory and use it
